<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jrubio.zombie_tap.ui.theme.Menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:id="@+id/miPerfilTxt"
                android:text="@string/miPerfilTxt">
            </TextView>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imagenPerfil"
                android:src="@drawable/soldado"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:layout_width="150dp"
                android:layout_height="150dp"/>



            <TextView
                android:id="@+id/uid"
                android:layout_width="match_parent"
                android:text="@string/uid"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center">

            </TextView>
            <TextView
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:text="@string/nombre"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center">

            </TextView>

            <TextView
                android:id="@+id/correo"
                android:layout_width="match_parent"
                android:text="@string/correo"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center">

            </TextView>

            <TextView
                android:id="@+id/fecha"
                android:layout_width="match_parent"
                android:text="@string/fecha"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center">

            </TextView>

            <TextView
                android:id="@+id/edad"
                android:layout_width="match_parent"
                android:text="@string/edad"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center">

            </TextView>
            <TextView
                android:id="@+id/pais"
                android:layout_width="match_parent"
                android:text="@string/pais"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center">

            </TextView>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:id="@+id/miPuntuacionTxt"
            android:text="@string/miPuntuacionTxt">
        </TextView>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/zombies"
                android:layout_width="wrap_content"
                android:text="@string/zombies"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:layout_height="wrap_content">

            </TextView>
            <ImageView
                android:id="@+id/imagen"
                android:layout_marginTop="20dp"
                android:src="@drawable/zombie"
                android:layout_width="50dp"
                android:layout_marginStart="20dp"
                android:layout_height="50dp">

            </ImageView>

        </LinearLayout>




        <TextView
            android:id="@+id/menuTxt"
            android:layout_width="match_parent"
            android:text="@string/menuTxt"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:gravity="center">

        </TextView>
        <Button
            android:id="@+id/jugatBtn"
            android:layout_width="match_parent"
            android:text="@string/jugatBtn"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

        </Button>
        <Button
            android:id="@+id/editarBtn"
            android:layout_width="match_parent"
            android:text="@string/editarBtn"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

        </Button>
        <Button
            android:id="@+id/cambiarBtn"
            android:layout_width="match_parent"
            android:text="@string/cambiarBtn"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

        </Button>

        <Button
            android:id="@+id/puntuaciones"
            android:layout_width="match_parent"
            android:text="@string/puntuaciones"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

        </Button>

        <Button
            android:id="@+id/acercaBtn"
            android:layout_width="match_parent"
            android:text="@string/acercaBtn"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

        </Button>
        <Button
            android:id="@+id/cerrarSesion"
            android:layout_width="match_parent"
            android:text="@string/cerrarSesion"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

        </Button>



    </LinearLayout>





</ScrollView>