<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="10dp"
    android:elevation="2dp"
    app:contentPadding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imagenJugador"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/jugador">
        </de.hdodenhof.circleimageview.CircleImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nombreJugador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombreJugador"
                android:textSize="20sp">

            </TextView>

            <TextView
                android:id="@+id/paisJugador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paisJugador"
                android:textSize="20sp">

            </TextView>

            <TextView
                android:id="@+id/edadJugador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edadJugador"
                android:textSize="20sp">

            </TextView>

            <TextView
                android:id="@+id/puntajeJugador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/puntajeJugador"
                android:textSize="20sp">

            </TextView>

        </LinearLayout>

        
    </LinearLayout>
        




</androidx.cardview.widget.CardView>