<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jrubio.zombie_tap.ui.theme.Login">



    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        android:foregroundGravity="center">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/correoLogin"
            android:layout_width="match_parent"
            android:hint="@string/correoLogin"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content">
        </EditText>

    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:hint="@string/passwordLogin"
                android:id="@+id/passwordLogin"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content">
            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:text="@string/buttonLogin"
            android:layout_height="wrap_content">

        </Button>


    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>